# cassini-farmiq

./: .gitignore  .mise.toml  Dockerfile  README.md  docker-compose.yml  farm-plot.txt  farm.py  pyproject.toml
farm_perfect/: manage.py
farm_perfect/farm_management/: forms.py  models.py  urls.py  views.py
farm_perfect/farm_management/migrations/: 0001_initial.py  0002_seasonalevent_disease_type_seasonalevent_event_type_and_more.py
farm_perfect/farm_management/templates/farm_management/: event_form.html  plot_detail.html  plot_form.html  plot_list.html  season_form.html
farm_perfect/farm_perfect/: asgi.py  settings.py  urls.py  wsgi.py
farm_perfect/templates/: base.html
