[tool.poetry]
name = "py-farm-perfect"
version = "0.1.0"
description = ""
authors = ["George Antoniadis <george@noodles.gr>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.1"
django-leaflet = "^0.30.1"
psycopg2-binary = "^2.9.9"
psycopg2 = "^2.9.9"
dj-database-url = "^2.2.0"
django-widget-tweaks = "^1.5.0"
wxee = "^0.4.2"
ez-openai = "^0.0.6"
streamlit = "^1.38.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
